@@ -8,7 +8,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: pkgMkIndex.test,v 1.22 2002/07/04 01:20:37 dgp Exp $
+# RCS: @(#) $Id: pkgMkIndex.test,v 1.23 2002/07/06 18:19:46 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -556,6 +556,7 @@ set x [file join [file dirname [info nameofexecutable]] dltest \
 set dll "[file tail $x]Required"
 ::tcltest::testConstraint $dll [file exists $x]
 
+if {[testConstraint $dll]} {
 makeFile {
 #  This package provides Pkga, which is also provided by a DLL.
 package provide Pkga 1.0
@@ -564,6 +565,7 @@ proc pkga_neq { x } {
 }
 } [file join pkg pkga.tcl]
 file copy -force $x $fullPkgPath
+}
 testConstraint exec [llength [info commands ::exec]]
 
 test pkgMkIndex-10.1 {package in DLL and script} [list exec $dll] {
@@ -587,8 +589,10 @@ test pkgMkIndex-10.2 {package in DLL hidden by -load} [list exec $dll] {
     pkgtest::runCreatedIndex {0 {}} -lazy -load Pkg* -- $fullPkgPath pkga[info sharedlibextension]
 } {0 {}}
 
+if {[testConstraint $dll]} {
 file delete -force [file join $fullPkgPath [file tail $x]]
 removeFile [file join pkg pkga.tcl]
+}
 
 # Tolerate "namespace import" at the global scope
 
